--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.16.4",
-    "path": "^0.12.7"
+    "fs": "^0.0.1-security",
+    "heroku": "^8.2.0",
+    "path": "^0.12.7",
+    "promises": "^0.2.5"
   }
 }
